[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/followAI.gd" type="Script" id=1]
[ext_resource path="res://scenes/Global/PlayerDetectionArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/images/Enemies/Flying Bat/Bat Flying.png" type="Texture" id=3]
[ext_resource path="res://scenes/Global/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Global/stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Global/HitBox.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=10]
radius = 7.02738

[sub_resource type="CircleShape2D" id=2]
radius = 99.0051

[sub_resource type="CircleShape2D" id=9]
radius = 5.83788

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 6.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "flying"
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "flying"

[sub_resource type="AnimationNodeStateMachine" id=7]
states/flying/node = SubResource( 6 )
states/flying/position = Vector2( 98, 45 )
start_node = "flying"
graph_offset = Vector2( -142, -158 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[node name="Bat" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -3 )
texture = ExtResource( 3 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.548191, 0.255735 )
shape = SubResource( 10 )

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
damage = 25

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/flying = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 8 )

[node name="stats" parent="." instance=ExtResource( 5 )]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="noHealth" from="stats" to="." method="_on_stats_noHealth"]

[editable path="PlayerDetectionArea"]
[editable path="HurtBox"]
[editable path="HitBox"]
